--- a/frontend/feed.html
+++ b/frontend/feed.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>InstaClone — Feed</title>
+  <title>InstaClone! — Feed</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
